tests/invalid/ListGenerator_Invalid_1.whiley
function f() -> int[]:
    return [0; -1]
